--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SpeakEasy</string>
+    <string name="practice">Practice</string>
+    <string name="notifications">Notifications</string>
 </resources>
